# thesis

./: .gitignore  README.md  test
Collision_checking_matlab/: collision_checking.m  data.m  meshes  ntnu_legBODY.urdf  plot_circle_in_z.m  urdf
body_planner/: DRAFT2_geodesic_distance_investigation.m  acados_ocp_nlp.json  env.sh  get_simulink_data.m  quadruped_base.slx  sfun_inteface  sim_ls_mpc.slx  sim_ls_mpc.slxc  srbd_model.m  srbd_ocp.asv  srbd_ocp.m
body_planner/body_description/: full_robot.urdf
body_planner/helper_funcs/: exterior.m  geodesic_distance_SX.m  quat_conj.m  quat_difference.m  quat_inv.m  quat_log.m  quat_mul.m  quat_mul_SX.m  quat_prod_for_error.m  quaternion_difference_matrix.m  unpack_var.m
body_planner/verify_sim/: DRAFT1_testing_simulink.m  body_simulation.slx  body_simulation.slxc  euler_RB.m
complete_controller/: .gitignore  DK.m  Quadruped_Plant.slx  a_initialize_ws.m  acados_ocp_nlp.json  body_description  collection_of_systems_draft.slx  collection_of_systems_draft.slx.original  env.sh  extract_traj.m  initialize_sim_parameters.m  leg_description  noise_filter_for_velocities.slx  ntnu_leg_FL.slx  olympus.slx  overflowing_counter.slx  plot_pos_sim.m  pos_control_setup.m  pos_control_tracking.slx  quadruped_params_init.m  sim_report.asv  sim_report.m  torque_allocation.slx  traj_player.slx  traj_player_prepar.m
complete_controller/urdf/: ntnu_body.urdf
complete_controller/urdf/meshes/: body_MH_front_cover.stl  body_MH_front_motors.stl  body_MH_rear_cover.stl  body_MH_rear_motors.stl  main_body_collision.stl  main_body_collision_2.stl
drake_sim/: .gitignore  CMakeLists.txt  drake_helpers.hpp  ntnu_leg.cpp  ntnu_leg.hpp  ntnu_leg.urdf  ntnu_leg_im.cpp  position_controller.cpp  position_controller.hpp  test_class.cpp
drake_sim/examples/: CMakeLists.txt
drake_sim/examples/src/: ntnu_leg_sim.cpp  olympus_sim.cpp  test2.cpp
drake_sim/include/: drake_helpers.hpp  ntnu_leg.hpp  olympus.hpp  olympus_typedefs.hpp  position_controller.hpp
drake_sim/olympus_libraries/: CMakeLists.txt
drake_sim/olympus_libraries/include/: drake_helpers.hpp  ntnu_leg.hpp  olympus.hpp  position_controller.hpp
drake_sim/olympus_libraries/src/: ntnu_leg.cpp  olympus.cpp  position_controller.cpp
drake_sim/src/: ntnu_leg.cpp  ntnu_leg_sim.cpp  olympus.cpp  olympus_sim.cpp  position_controller.cpp
drake_sim/urdf/: ntnu_leg.urdf  ntnu_legFL.urdf  ntnu_legFR.urdf  ntnu_legRL.urdf  ntnu_legRR.urdf  quadruped_base.urdf
drake_sim/urdf/meshes/: body_collision.STL
leg_planner/: KD_definition.m  a_Initialize_workspace.m  acados_ocp_nlp.json  acados_sim.json  clc.mat  constraint_coefficients.m  define_functions.m  draft_simplify_M.m  leg_model.m  leg_model_u.m  leg_ocp.m  leg_ocp_torque.m  leg_ocp_torque_disp.m  leg_sim_acados.m  map of sfunction  map_of_torque_sfunction  matrices.m  ntnu_leg.slxc  ntnu_leg_motion_generation.slxc  ntnu_leg_pos_mpc.slxc  simplify_dynamic_matrices.m  test_plotter.m  torque simulink manual  u_leg_ocp_torque_disp.m  untitled.slx.autosave  verify_leg_sim.m
leg_planner/Trajectories/: N150Th06_lr_1.mat  N150Th06_rl_2.mat  N150Th075_lr_02.mat  N150Th075_rl_01.mat  N150Th075_rl_TC_01.mat  N150Th075_rl_TC_01_u.mat
leg_planner/c_generated_code/: CMakeLists.txt  Makefile  acados_mex_create_ntnu_leg_disp.c  acados_mex_create_ntnu_leg_disp.mexa64  acados_mex_create_ntnu_leg_u_disp.c  acados_mex_create_ntnu_leg_u_disp.mexa64  acados_mex_free_ntnu_leg.mexa64  acados_mex_free_ntnu_leg_disp.c  acados_mex_free_ntnu_leg_disp.mexa64  acados_mex_free_ntnu_leg_u_disp.c  acados_mex_free_ntnu_leg_u_disp.mexa64  acados_mex_set_ntnu_leg.c  acados_mex_set_ntnu_leg_disp.c  acados_mex_set_ntnu_leg_disp.mexa64  acados_mex_set_ntnu_leg_u_disp.c  acados_mex_set_ntnu_leg_u_disp.mexa64  acados_mex_solve_ntnu_leg.c  acados_mex_solve_ntnu_leg.mexa64  acados_mex_solve_ntnu_leg_disp.c  acados_mex_solve_ntnu_leg_disp.mexa64  acados_mex_solve_ntnu_leg_u_disp.c  acados_mex_solve_ntnu_leg_u_disp.mexa64  acados_ocp_nlp.json  acados_sim_create_ntnu_leg.c  acados_sim_create_ntnu_leg.mexa64  acados_sim_free_ntnu_leg.c  acados_sim_free_ntnu_leg.mexa64  acados_sim_set_ntnu_leg.c  acados_sim_set_ntnu_leg.mexa64  acados_sim_solver_ntnu_leg.c  acados_sim_solver_ntnu_leg_disp.c  acados_sim_solver_ntnu_leg_disp.h  acados_sim_solver_ntnu_leg_u_disp.c  acados_sim_solver_ntnu_leg_u_disp.h  acados_sim_solver_sfunction_ntnu_leg.c  acados_sim_solver_sfunction_ntnu_leg.mexa64  acados_sim_solver_sfunction_ntnu_leg_disp.c  acados_sim_solver_sfunction_ntnu_leg_u_disp.c  acados_solver_ntnu_leg.c  acados_solver_ntnu_leg.h  (+29 more)
leg_planner/c_generated_code/c_generated_code/: CMakeLists.txt  Makefile  acados_mex_create_ntnu_leg.c  acados_mex_create_ntnu_leg.mexa64  acados_mex_free_ntnu_leg.c  acados_mex_set_ntnu_leg.mexa64  acados_sim_solver_ntnu_leg.c  acados_sim_solver_ntnu_leg.h  acados_sim_solver_sfunction_ntnu_leg.c  acados_sim_solver_sfunction_ntnu_leg.mexa64  acados_solver_ntnu_leg.c  acados_solver_ntnu_leg.h  acados_solver_sfunction_ntnu_leg.c  acados_solver_sfunction_ntnu_leg.mexa64  main_mex_ntnu_leg.c  main_ntnu_leg.c  main_sim_ntnu_leg.c  make_main_mex_ntnu_leg.m  make_sfun.m  make_sfun_sim.m  ntnu_leg_mex_solver.m
leg_planner/c_generated_code/ntnu_leg_constraints/: ntnu_leg_constr_h_fun.c  ntnu_leg_constr_h_fun_jac_uxt_zt.c  ntnu_leg_constr_h_fun_jac_uxt_zt_hess.c
leg_planner/c_generated_code/ntnu_leg_cost/: ntnu_leg_cost.h  ntnu_leg_cost_y_0_fun.c  ntnu_leg_cost_y_fun.c  (+4 more)
leg_planner/helper_funcs/: base_disp_calc.m  base_torque_calc.m  check_for_HUGE_terms.m  consistent_x0.m  disp_rates.m  ditch_small_terms.m  exterior.m  initialize_plot.m  naming_automation.m  ntnu_leg_closed.m  ntnu_leg_ode.m  populate_plot.m
leg_planner/leg_eom/: Compute_constraints.m  ntnu_eom.m
leg_planner/simulink/: ntnu_leg.slx  ntnu_leg.slx.autosave  ntnu_leg.slxc  ntnu_leg_motion_generation.slx  ntnu_leg_motion_generation.slxc  ntnu_leg_motion_player.slx  ntnu_leg_pos_mpc.slx  ntnu_leg_torque_control.slx  ntnu_leg_torque_control.slx.autosave
(+117 files in other folders)
